--- a/tuman.html
+++ b/tuman.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Выборы ТУМАН - Minecraft</title>
+    <title>Выборы ТУМАН</title>
     <link rel="stylesheet" href="tumancss.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
 
     <div class="container">
         <header>
-            <h1>Выборы на сервере Minecraft</h1>
+            <h1>Республиканские Выборы</h1>
             <p>Выбери свою сторону. Каждый голос имеет значение!</p>
         </header>
 
@@ -54,4 +54,5 @@
 
     <script src="tumanjava.js"></script>
 </body>
+
 </html>
