--- a/tuman.html
+++ b/tuman.html
@@ -32,7 +32,7 @@
 
             <div class="parties-container">
                 <div class="party-card" id="party-a">
-                    <img src="<a href="https://imgfoto.host/i/5QyRmb"><img src="https://a.imgfoto.host/2025/08/25/IZOBRAZENIE_2025-08-25_122845269.png" alt="IZOBRAZENIE_2025-08-25_122845269.png" border="0" /></a>" alt="Единый ТУМАН">
+                    <img src="https://imgfoto.host/i/5QyRmb" border="0" /></a>" alt="Единый ТУМАН">
                     <h2>ЕДИНЫЙ ТУМАН</h2>
                     <p class="vote-count" id="votes-party-a">0</p>
                     <button class="vote-button" data-party="a">ГОЛОСОВАТЬ</button>
@@ -56,4 +56,5 @@
 </body>
 
 </html>
+
 
