--- a/tuman.html
+++ b/tuman.html
@@ -32,7 +32,7 @@
 
             <div class="parties-container">
                 <div class="party-card" id="party-a">
-                    <img src="https://imgfoto.host/i/5QyRmb" border="0" /></a>" alt="Единый ТУМАН">
+                    <img src="https://a.imgfoto.host/2025/08/25/IZOBRAZENIE_2025-08-25_122845269.png" alt="Единый ТУМАН">
                     <h2>ЕДИНЫЙ ТУМАН</h2>
                     <p class="vote-count" id="votes-party-a">0</p>
                     <button class="vote-button" data-party="a">ГОЛОСОВАТЬ</button>
@@ -48,13 +48,10 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Minecraft Server</p>
+            <p>&copy; 2025 Туман</p>
         </footer>
     </div>
 
     <script src="tumanjava.js"></script>
 </body>
-
 </html>
-
-
